@@ -1,5 +1,7 @@
 2009-08-13  Doug Evans  <dje@sebabeach.org>
 
+	* dev.scm: Document tracing options.
+
 	* pmacros.scm (pmacro-dump): New function.
 	(check-pmacro): Tweak debugging output.
 	* doc/cgenint.texi: Mention pmacro-dump, pmacro-debug.
